  * Cleanup of the manual, in particular how lexical scanners can access the
    various values of polymorphic semantic value types (cf. section
    `Polymorphism and multiple semantic values') 

  * The manual-stamp file is no longer used. Calling 'build manual' now always
    (re)builds the manual. The same holds true for 'build man'.

bisonc++ (4.10.01) 

  * Production rules of non-terminal symbols that immediately follow dot
    positions of existing items are added as new (implied) items to that
    state's set of items. The --construction option no longer shows the
    indices of such newly added items as this information can easily be
    obtained from the provided construction output.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 17 May 2015 16:54:13 +0200

bisonc++ (4.10.00) 

  * FOLLOW sets are not used when analyzing LALR(1) grammars. The class
    FollowSet and all operations on follow sets were removed.

  * The LA set computation algorithm was reimplemented, a description of the 
    new algorithm is included in the manual and in several source files, in
    particular state/determinelasets.cc. Both the state items' LA computation
    and the LA propagation algorithms were completely reimplemented.

  * Rules causing conflicts (i.e., conflict remaining after processing %left,
    %right, %nonassoc and/or %expect) as wel as the involved LA characters re
    briefly mentioned immediately following the SR/RR conflict-counts.

  * The class Symtab now uses an unordered_map rather than a mere (ordered)
    map.

  * The class-dependency diagram (README.class-setup) was updated to reflect
    the latest changes. Same for the file CLASSES which is used by the build
    script. 

  * Added the file `required' listing the non-standard software that is
    required to build bisonc++ and its user guide / man-page

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 17 May 2015 13:13:55 +0200

bisonc++ (4.09.02) 
