@@ -1,0 +1,3 @@
+A short demo program is found in documentation/manual/grammar/poly/;
+A demo illustrating the way polymorphic semantic type assignment works is
+provided in documentation/manual/grammar/essence/demo.cc.
