@@ -19,3 +19,5 @@ or
 
 To end the program: ^D or ^C. Any other input also ends the program (with a
 syntax error message)
+
+See also the explanation of the implementation of operator= in ../essence.
