@@ -1,6 +1,6 @@
 #include "parser.ih"
 
-void Parser::process(STYPE__ &semVal) const
+void Parser::process(STYPE__ const &semVal) const
 {
     if (semVal.tag() == Tag__::INT)
         cout << "Saw an int-value: " << semVal.get<Tag__::INT>() << '\n';
