@@ -15,7 +15,7 @@ template <Tag__ tg_>
 inline Semantic<tg_>::Semantic()
 :
     Base(tg_),
-    d_data(typename TypeOf<tg_>::type())
+    d_data{}
 {}
 
 template <Tag__ tg_>
@@ -26,7 +26,7 @@ inline Semantic<tg_>::Semantic(typename TypeOf<tg_>::type const &data)
 {}
 
 template <Tag__ tg_>
-inline Semantic<tg_>::Semantic(typename TypeOf<tg_>::type &&tmp)
+inline Semantic<tg_>::Semantic(DataType &&tmp)
 :
     Base(tg_),
     d_data(std::move(tmp))
@@ -39,7 +39,19 @@ inline typename TypeOf<tg_>::type &Semantic<tg_>::data()
 }
 
 template <Tag__ tg_>
+inline typename TypeOf<tg_>::type const &Semantic<tg_>::data() const
+{
+    return d_data;
+}
+
+template <Tag__ tg_>
 inline typename TypeOf<tg_>::type &Base::get()
+{
+    return static_cast<Semantic<tg_> *>(this)->data();
+}
+
+template <Tag__ tg_>
+inline typename TypeOf<tg_>::type const &Base::get() const
 {
     return static_cast<Semantic<tg_> *>(this)->data();
 }
@@ -62,6 +74,12 @@ inline typename TypeOf<tg_>::type &SType::get()
 
 template <Tag__ tg_>
 inline typename TypeOf<tg_>::type &SType::data()
+{
+    return std::shared_ptr<Base>::get()->get<tg_>();
+}
+
+template <Tag__ tg_>
+inline typename TypeOf<tg_>::type const &SType::data() const
 {
     return std::shared_ptr<Base>::get()->get<tg_>();
 }
